examples/test/testpolicy1052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1052
  namespace: namespace156
spec:
  podSelector:
    matchLabels:
      key4: value2
      key34: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value0
          key4: value11
      podSelector:
        matchLabels:
          key9: value33
